# atlas-final

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-windows.yml
cmake/: mingw-w64-x86_64.cmake
include/ai/: AIModelClient.h
include/audio/: MicRecorder.h  MicStream.h  PiperSynthesizer.h  SpeechDetector.h  VoiceNotifier.h  WhisperTranscriber.h
include/calendar/: CalendarModule.h
include/core/: Application.h  ServiceOrchestrator.h
include/email/: EmailModule.h
include/storage/: CredentialStore.h
include/voice/: VoiceInteractionManager.h  VoicePipeline.h  piper_tts.h
include/wake/: ModelManager.h  OnnxWakeModel.h  WakeWordClient.h  WakeWordEngine.h  WakeWordManager.h
qml/: Main.qml
src/: main.cpp  qt_main.cpp
src/ai/: AIModelClient.cpp
src/audio/: MicRecorder.cpp  MicStream.cpp  PiperSynthesizer.cpp  SpeechDetector.cpp  VoiceNotifier.cpp  WhisperTranscriber.cpp
src/calendar/: CalendarModule.cpp
src/core/: Application.cpp  ServiceOrchestrator.cpp
src/email/: EmailModule.cpp
src/storage/: CredentialStore.cpp
src/voice/: VoiceInteractionManager.cpp  VoicePipeline.cpp  piper_tts.cpp
src/wake/: ModelManager.cpp  OnnxWakeModel.cpp  WakeWordClient.cpp  WakeWordEngine.cpp  WakeWordManager.cpp
ui/: AssistantWidget.cpp  AssistantWidget.h  MainWindow.cpp  MainWindow.h  assistant_ui.cpp  assistant_ui.h
wakeword/: wakeword_service.py
